--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Coffee Shop</title>
-  <link rel="icon" type="image/x-icon" href="/Assets/Icon.png">
+  <link rel="icon" type="image/x-icon" href="./Assets/Icon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet' href='https://unicons.iconscout.com/release/v3.0.0/css/line.css'>
   <link rel="stylesheet" href="./style.css">
@@ -16,7 +16,7 @@
   <header>
     <div class="nav-wrapper">
     <nav class="navbar">
-      <img src="/Assets/Logo.png" alt="Company Logo">
+      <img src="./Assets/Logo.png" alt="Company Logo">
       <div class="menu-toggle" id="mobile-menu">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -47,42 +47,42 @@
     <div class="menu-container">
 
       <div class="card">
-        <img src="/Assets/cappuccino.jpg" />
+        <img src="./Assets/cappuccino.jpg" />
         <h3>Cappuccino<br>&#8377;250</h3>
         <button class="menu-btn"><span class="text">Buy Now</span></button>
       </div>
       <div class="card">
-        <img src="/Assets/espresso.jpg" />
+        <img src="./Assets/espresso.jpg" />
         <h3>Espresso<br>&#8377;225</h3>
         <button class="menu-btn"><span class="text">Buy Now</span></button>
       </div>
       <div class="card">
-        <img src="/Assets/latte.jpg" />
+        <img src="./Assets/latte.jpg" />
         <h3>Latte<br>&#8377;250</h3>
         <button class="menu-btn"><span class="text">Buy Now</span></button>
       </div>
       <div class="card">
-        <img src="/Assets/Americano.jpg" />
+        <img src="./Assets/Americano.jpg" />
         <h3>Americano<br>&#8377;200</h3>
         <button class="menu-btn"><span class="text">Buy Now</span></button>
       </div>
       <div class="card">
-        <img src="/Assets/cold-cafe.jpg" />
+        <img src="./Assets/cold-cafe.jpg" />
         <h3>Cold Coffee<br>&#8377;175</h3>
         <button class="menu-btn"><span class="text">Buy Now</span></button>
       </div>
       <div class="card">
-        <img src="/Assets/frappe.jpeg" />
+        <img src="./Assets/frappe.jpeg" />
         <h3>Frappuccino<br>&#8377;300</h3>
         <button class="menu-btn"><span class="text">Buy Now</span></button>
       </div>
       <div class="card">
-        <img src="/Assets/pancake.jpg" />
+        <img src="./Assets/pancake.jpg" />
         <h3>Pancake<br>&#8377;350</h3>
         <button class="menu-btn"><span class="text">Buy Now</span></button>
       </div>
       <div class="card">
-        <img src="/Assets/cheesecake.jpg" />
+        <img src="./Assets/cheesecake.jpg" />
         <h3>Cheesecake<br>&#8377;250</h3>
         <button class="menu-btn"><span class="text">Buy Now</span></button>
       </div>
@@ -94,9 +94,9 @@
     <h1><span style="font-style: italic">A</span>bout us</h1>
     <section class="carousel">
       <div class="img-list" id="img-list">
-        <img src="/Assets/carousel-1.jpg" alt="Unsplash Photo" width="770">
-        <img src="/Assets/carousel-2.jpg" alt="Unsplash Photo" width="770">
-        <img src="/Assets/carousel-3.jpeg" alt="Unsplash Photo" width="770">
+        <img src="./Assets/carousel-1.jpg" alt="Unsplash Photo" width="770">
+        <img src="./Assets/carousel-2.jpg" alt="Unsplash Photo" width="770">
+        <img src="./Assets/carousel-3.jpeg" alt="Unsplash Photo" width="770">
       </div>
       <div class="content">
         <div class="text-content" onclick="slideText(0)">
@@ -170,7 +170,7 @@
         <hr style="height:2.5px;border-width:0;background-color:#f9fdc0">
         <footer>
           <div class="foot-logo">
-            <img src="/Assets/Logo.png" alt="Company Logo">
+            <img src="./Assets/Logo.png" alt="Company Logo">
           </div>  
           <div class="social">
             <a href="#"><i class="uil uil-instagram"></i></a>
